# Aythsr.github.io

./: .gitignore  README.md  index.html
2024/12/17/first/: index.html
2024/12/17/hello-world/: index.html
CMakeLearn/dome/: CMakeLists.txt  README.md
CMakeLearn/dome/examples/: CMakeLists.txt  calculator_example.cpp
CMakeLearn/dome/include/mylib/: mylib.h
CMakeLearn/dome/src/: CMakeLists.txt  mylib.cpp
CMakeLearn/dome/test/: CMakeLists.txt  calculator_test.cpp  calculator_test1.cpp  ttest  ttest.cc
CMakeLearn/dome/test/ttest.dSYM/Contents/: Info.plist
CMakeLearn/dome/test/ttest.dSYM/Contents/Resources/DWARF/: ttest
CMakeLearn/dome/test/ttest.dSYM/Contents/Resources/Relocations/aarch64/: ttest.yml
TamperMonkey/smjs/: am.js  do.html  smjs.js  xpath.txt
TamperMonkey/北航抢课raw/: buaa.js  buaa_combined.js  get-button.js  get_kcdm.js
archives/: index.html
archives/2024/: index.html
archives/2024/12/: index.html
calendar/: appleCalendarIf.py  class.json  lanqiao.py  paser_get.py  readme.md  set_calendar.py
code-test-gen/: extract.sh  readme.md
code-test-gen/content/ST_pack1/: data.cpp  exec.sh  getdata.sh  makefile  std.cpp
code-test-gen/content/ST_pack2/: base.sh  getdata.sh  std.cpp  xe.sh
code-test-gen/lanqiao/: exec.sh  extra.sh  getdata.sh  题目说明.txt  题解.md  题面.md
gp/: get_data.py  send_mail.py  server.py
openMP/1/: dome.c  makefile  start.py
openMP/lab1/: README.md  matrix_multiply.c  res.txt  run_tests.py  sine_calculation.c  作业1报告.md  作业要求.md
py_pcap/: out_ip.py  readme.md  removeip.py
sqlite/: dome.cpp  readme.md
(+2 files in other folders)
